@@ -75,6 +75,7 @@
     <ClCompile Include="..\..\src\microhttpd\internal.c" />
     <ClCompile Include="..\..\src\microhttpd\md5.c" />
     <ClCompile Include="..\..\src\microhttpd\memorypool.c" />
+    <ClCompile Include="..\..\src\microhttpd\mhd_mono_clock.c" />
     <ClCompile Include="..\..\src\microhttpd\postprocessor.c" />
     <ClCompile Include="..\..\src\microhttpd\reason_phrase.c" />
     <ClCompile Include="..\..\src\microhttpd\response.c" />
@@ -94,6 +95,7 @@
     <ClInclude Include="..\..\src\microhttpd\memorypool.h" />
     <ClInclude Include="..\..\src\microhttpd\mhd_byteorder.h" />
     <ClInclude Include="..\..\src\microhttpd\mhd_limits.h" />
+    <ClInclude Include="..\..\src\microhttpd\mhd_mono_clock.h" />
     <ClInclude Include="..\..\src\microhttpd\reason_phrase.h" />
     <ClInclude Include="..\..\src\microhttpd\response.h" />
     <ClInclude Include="..\..\src\microhttpd\tsearch.h" />
